src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Marks default 1099 box for reporting cash disbursements to a 1099 vendor.</inlineHelpText>
        <label>Default 1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Rents</fullName>
                </value>
                <value>
                    <fullName>2. Royalties</fullName>
                </value>
                <value>
                    <fullName>3. Other Income</fullName>
                </value>
                <value>
                    <fullName>4. Federal Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5. Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6. Medical Payments</fullName>
                </value>
                <value>
                    <fullName>7. Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8. Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>10. Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13. Golden Parachute</fullName>
                </value>
                <value>
                    <fullName>14. Attorney Proceeds</fullName>
                </value>
                <value>
                    <fullName>15a. Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b. Section 409A Income</fullName>
                </value>
                <value>
                    <fullName>16. State Tax Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Billing_Rate__c</fullName>
        <label>Default Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__VC_PW__c</fullName>
        <label>VC PW</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ECUSTOMS__VC_Secno__c</fullName>
        <label>VC Secno</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Active_Person_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to store  Active Person Profile value</description>
        <inlineHelpText>Person Profile value</inlineHelpText>
        <label>Active Person Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Date_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Date Format</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Person_Profile_Login__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Person Profile Login</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Site__c</fullName>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site1</fullName>
                </value>
                <value>
                    <fullName>Allentown</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                    <isActive>false</isActive>
                    <label>California</label>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                    <isActive>false</isActive>
                    <label>LOS Angeles</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__CanManageAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Manage DocuSign Account</description>
        <label>Can Manage DocuSign Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dfsle__Provisioned__c</fullName>
        <description>Date when the user was added to the account</description>
        <inlineHelpText>Date provisioned</inlineHelpText>
        <label>DocuSign Provisioned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dfsle__Status__c</fullName>
        <label>Docusign Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dfsle__Username__c</fullName>
        <description>DocuSign Username</description>
        <label>DocuSign Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDCTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All Duplicate Check triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_Reference_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedFedExEndUserKey__c</fullName>
        <label>Encrypted FedEx End User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedFedExEndUserPassword__c</fullName>
        <label>Encrypted FedEx End User Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExEndUserKey__c</fullName>
        <label>FedEx End User Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExEndUserPassword__c</fullName>
        <label>FedEx End User Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExRegisteredPreference__c</fullName>
        <label>FedEx Registered Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Registered_Preference__c</fullName>
        <label>Registered Preference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UserCredentialsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Credentials Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>QPMS__User_Edit_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name  &lt;&gt; &apos;System Administrator&apos;, OR(ISCHANGED( FirstName ),ISCHANGED(  LastName  ),ISCHANGED(   Email   ),ISCHANGED(   Alias   ),ISCHANGED(   MiddleName   ),ISCHANGED(   CommunityNickname   ),ISCHANGED(   Phone ),ISCHANGED( Fax ),ISCHANGED( Extension ),ISCHANGED(    MobilePhone )))</errorConditionFormula>
        <errorMessage>You Cannot Edit User details</errorMessage>
    </validationRules>
</CustomObject>